--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
-		<script src="booklet/jquery.easing.1.3.js" type="text/javascript"></script>
-		<script src="booklet/jquery.booklet.1.1.0.min.js" type="text/javascript"></script>
+		<script src="jquery.easing.1.3.js" type="text/javascript"></script>
+		<script src="jquery.booklet.1.1.0.min.js" type="text/javascript"></script>
 
-		<link href="booklet/jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+		<link href="jquery.booklet.1.1.0.css" type="text/css" rel="stylesheet" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 
-		<script src="cufon/cufon-yui.js" type="text/javascript"></script>
-		<script src="cufon/ChunkFive_400.font.js" type="text/javascript"></script>
-		<script src="cufon/Note_this_400.font.js" type="text/javascript"></script>
+		<script src="cufon-yui.js" type="text/javascript"></script>
+		<script src="ChunkFive_400.font.js" type="text/javascript"></script>
+		<script src="Note_this_400.font.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			Cufon.replace('h1,p,.b-counter');
 			Cufon.replace('.book_wrapper a', {hover:true});
@@ -34,19 +34,19 @@
 			<div id="mybook" style="display:none;">
 				<div class="b-load">
 					<div>
-						<img src="images/main.jpg" alt=""/>
+						<img src="main.jpg" alt=""/>
 					</div>
 					<div>
-						<img src="images/me.jpg" alt="" />
+						<img src="me.jpg" alt="" />
 					</div>
 					<div>
-						<img src="images/mt.jpg" alt="" />
+						<img src="mt.jpg" alt="" />
 					</div>
 					<div>
-						<img src="images/ae.jpg" alt="" />
+						<img src="ae.jpg" alt="" />
 					</div>
 					<div>
-						<img src="images/at.jpg" alt="" />
+						<img src="at.jpg" alt="" />
 					</div>
 					<!--<div>
 						<img src="images/m2.jpg" alt="" />
@@ -55,7 +55,7 @@
 						<img src="images/e1.jpg" alt="" />
 					</div> -->
 					<div>
-						<img src="images/e2.jpg" alt="" />
+						<img src="e2.jpg" alt="" />
 					</div>
 				</div>
 			</div>
